# github-python-build-test

./: MANIFEST.in  README.md  math_operations.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: python-ci-workflow  python-ci-workflow.yml
